MOAAAR IMAGES AND GAMES!!

--- a/bun-app/package.json
+++ b/bun-app/package.json
@@ -2,8 +2,11 @@
   "name": "bun-app",
   "private": true,
   "version": "0.0.0",
+  "homepage": "https://NicolaiDamm.github.io/BUN_React/",
   "type": "module",
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist",
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
@@ -21,6 +24,7 @@
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "@vitejs/plugin-react": "^3.1.0",
+    "gh-pages": "^5.0.0",
     "vite": "^4.2.0"
   }
 }
